# drake

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECRETS.example.md
.cursor/: hooks.json
.cursor/agents/: pr-babysitter.md  slice-implementer.md  slice-preflight.md
.cursor/hooks/: block-task-tool.sh  post-edit-portfolio-validation.sh
.docs/: hosted-ip-staging.md  hosted_api_sketch.schema.json  mcp_environment_profile.schema.json  slice_dependency_tree.schema.json
.docs/examples/: README.md  deployment.example.md  (+7 more)
adapters/: CONTRACT.md  evidence-contract.schema.json  task-packet.schema.json  validation-results.schema.json
docs/: getting-started.md
scripts/: automation_run_history.py  ci_preflight.sh  dev-hosted.sh  export_drake_public.py  fetch_github_path.py  hosted-ip-staging.sh  mcp_environment_profile.py  select_next_automation_slice.py  slice_lifecycle.py  sync_mcp_environment_profile.py  sync_slice_pipeline_local.py  validate_automation_run_dir.py  validate_drake_export.py  validate_hosted_api_sketch.py  validate_mcp_environment_profile.py  validate_slice_dependency_tree.py  validate_validation_results.py  validate_worker_credential_refs.py  validation_results.py
services/api/: README.md  pyproject.toml
services/api/src/hosted_api/: __init__.py  main.py  read_models.py
services/api/src/hosted_api/routers/: health.py  read.py  sync.py
services/api/src/hosted_api/sync/: __init__.py  github.py
services/api/tests/: test_github_sync.py  test_health.py  test_read_endpoints.py
tests/: test_export_drake_public.py
(+105 files in other folders)
