[project]
name = "hosted-ops-api"
version = "0.1.0"
description = "Hosted operations API scaffold for repository-native governance."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.138.2",
    "uvicorn==0.49.0",
]

[project.optional-dependencies]
dev = [
    "httpx2==2.5.0",
    "pytest==9.1.1",
]

[build-system]
requires = ["hatchling==1.30.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hosted_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
